<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">

    <include
        layout="@layout/toolbar_layout"/>

    <EditText
        android:id="@+id/search_textN"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include
        layout="@layout/checkbox_layout"/>

    <ImageView
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchButton"
        android:text="@string/switchButtonsText"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>