...
    tools:context="com.projet5.mynewsreprog.SearchActivity">

    <include layout="@layout/toolbar_layout" />


    <EditText
        android:id="@+id/search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        android:hint="@string/search_term"
        android:maxLines="1" />
...
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/checkbox_layout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorAccent"
        android:text="Search" />
...
