<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ThemeOverlay.MaterialComponents.Light"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorViolet"
        app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:title="My News">

    </androidx.appcompat.widget.Toolbar>

</androidx.appcompat.widget.LinearLayoutCompat>